--- a/first-task/src/App.css
+++ b/first-task/src/App.css
@@ -1,6 +1,6 @@
 .header {
   height: 60vh;
-  background-image: url(../public/Images/2150691727.jpg);
+  background-image: url(./assets/images/2150691727.jpg);
   background-size: 100%;
   background-position-y: 15%;
   background-repeat: no-repeat;
