--- a/first-task/src/App.css
+++ b/first-task/src/App.css
@@ -5,3 +5,9 @@
   background-position-y: 15%;
   background-repeat: no-repeat;
 }
+
+.nav-container {
+  display: flex;
+  justify-content: right;
+  align-items: center;
+}
