--- a/first-task/src/components/nav-bar/navbar.css
+++ b/first-task/src/components/nav-bar/navbar.css
@@ -1,5 +1,7 @@
 .nav-bar-container {
   display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .nav-bar-section li {
@@ -14,7 +16,7 @@
   color: #fbf4e3;
   text-decoration: none;
   text-transform: uppercase;
-  font-family: "Montserrat", sans-serif;
-  font-weight: 600;
-  font-size: 1.2rem;
+  font-family: "Inter", sans-serif;
+  font-weight: 500;
+  font-size: 1.15rem;
 }
