--- a/first-task/src/components/nav-bar/navbar.css
+++ b/first-task/src/components/nav-bar/navbar.css
@@ -9,7 +9,7 @@
 }
 
 .nav-btn-container {
-  padding: 1.5em;
+  padding: 0 1.5em;
 }
 
 .nav-btn {
@@ -18,5 +18,5 @@
   text-transform: uppercase;
   font-family: "Inter", sans-serif;
   font-weight: 500;
-  font-size: 1.15rem;
+  font-size: 1.1rem;
 }
