--- a/first-task/src/App.css
+++ b/first-task/src/App.css
@@ -1,26 +1,26 @@
 .header {
-  height: 60vh;
+  height: 50vh;
   background-image: url(./assets/images/header.jpg);
   background-size: 100%;
-  background-position: bottom cover;
+  background-position: cover;
   background-repeat: no-repeat;
 }
 
 .nav-container {
   display: flex;
-  justify-content: right;
+  justify-content: space-between;
   align-items: center;
   padding: 2em 1.5em;
 }
 
-.main-nav-btns-container {
-  margin: 0 15em;
+.logo-container {
+  width: 10%;
 }
 
 .header-title {
   display: flex;
   flex-direction: column;
-  margin: 2.5em 0em 0em 6em;
+  margin: 1.5em 0em 0em 6em;
   color: #fbf4e3;
   text-shadow: 0px 0px 10px rgba(67, 30, 4, 0.349);
 }
@@ -41,4 +41,9 @@
 
 .cards {
   width: 100%;
+}
+
+#menu {
+  height: 1200px;
+  color: blueviolet;
 }
