--- a/first-task/src/components/cards-carousel/card.css
+++ b/first-task/src/components/cards-carousel/card.css
@@ -1,3 +1,44 @@
+.cards-container {
+  display: flex;
+  flex-wrap: wrap;
+  margin: 2em;
+}
+
+.card-content-container {
+  margin: 0 0.7em;
+  border: none;
+  border-radius: 13px;
+  width: 20%;
+  text-align: center;
+  background-image: linear-gradient(
+    rgba(255, 255, 0, 0),
+    rgba(40, 40, 40, 0.037)
+  );
+}
+
+.card-content-container:hover {
+  box-shadow: 0 0 5px rgba(40, 40, 40, 0.331);
+}
+
 .card-img {
-  height: 300px;
+  height: 19em;
+}
+
+.card-text {
+  padding: 1.2em 0;
+}
+
+.card-text-title {
+  color: #282828;
+  font-family: "Inter", sans-serif;
+  font-weight: 700;
+  font-size: 1.563rem;
+}
+
+.card-text-subtitle {
+  font-family: "Montserrat", sans-serif;
+  text-transform: uppercase;
+  font-size: 1rem;
+  font-weight: 700;
+  color: #c0884b;
 }
