--- a/first-task/src/components/user-account/user-account.css
+++ b/first-task/src/components/user-account/user-account.css
@@ -9,6 +9,7 @@
   text-transform: uppercase;
   font-family: "Inter", sans-serif;
   font-weight: 500;
-  font-size: 1.1rem;
+  font-size: 1rem;
   padding: 0 1em;
+  width: 100%;
 }
