--- a/first-task/src/App.css
+++ b/first-task/src/App.css
@@ -43,8 +43,15 @@
   width: 100%;
 }
 
-#about-us {
+/* #about-us {
   border-top: 1px solid #c0884b;
+} */
+
+#about-us h1 {
+  font-family: "Inter", sans-serif;
+  font-weight: 700;
+  font-size: 3rem;
+  color: #c0884b;
 }
 
 #menu {
